src/test/ui/kindck/kindck-send-owned.stderr
error[E0277]: `*mut u8` cannot be sent between threads safely
  --> $DIR/kindck-send-owned.rs:12:5
   |
LL | fn assert_send<T:Send>() { }
   |                  ---- required by this bound in `assert_send`
...
LL |     assert_send::<Box<*mut u8>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut u8` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `*mut u8`
   = note: required because of the requirements on the impl of `Send` for `Unique<*mut u8>`
   = note: required because it appears within the type `Box<*mut u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
